Fixed top Spacing in login and register

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -21,6 +21,10 @@ body{
   margin-top: 60px;
 }
 
+.login-body{
+  margin-top: 10px;
+}
+
 
 /*different  text and header stylings */
 
